--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body,td,th {
       <td><strong>邓晓夏</strong> <a href="https://54dxx.github.io/why-no-pictures/">https://54dxx.github.io/why-no-pictures/</a></td>
     </tr>
     <tr>
-      <td><strong>伍声远</strong></td>
+      <td><strong>伍声远 </strong><a href="https://wyfnb666.github.io/jtm/">https://wyfnb666.github.io/jtm/</a></td>
     </tr>
   </tbody>
 </table>
