--- a/index.html
+++ b/index.html
@@ -1,38 +1,27 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="zh-CN">
 <head>
-<meta charset="utf-8">
-<title>208</title>
-<style type="text/css">
-body {
-	background-color: #FFFFFF;
-}
-body,td,th {
-	color: #000000;
-	font-size: 36px;
-}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>1</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
+<body style="">
+    <div class="container">
+        <header>
+            <h1 class="title">208寝室网站主页</h1>
+        </header>
+        <section class="image-section">
+            <img src="img/DSC03423.JPG" alt="美化图片" class="fade-in">
+            
+        </section>
+        <section class="button-section">
+            <button class="hover-button"onclick="window.location.href='https://elcept.github.io/base/'">李若川</button>
+            <button class="hover-button"onclick="window.location.href='https://54dxx.github.io/why-no-pictures/'">邓晓夏</button>
+            <button class="hover-button"onclick="window.location.href='https://wyfnb666.github.io/jtm/'">伍声远</button>
+        </section>
+    </div>
 
-<body>
-<table width="200" border="0">
-  <tbody>
-    <tr>
-      <td align="center"><h1><strong style="font-family: Segoe, 'Segoe UI', 'DejaVu Sans', 'Trebuchet MS', Verdana, sans-serif; font-size: 100px; color: #000000;">208寝室个人网页主页</strong></h1></td>
-    </tr>
-    <tr>
-      <td><img src="img/DSC03423.JPG" width="1051" height="701" alt=""/></td>
-    </tr>
-    <tr>
-      <td><strong><span style="font-family: 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', 'DejaVu Sans', Verdana, sans-serif">李若川</span></strong> <a href="https://elcept.github.io/base/">https://elcept.github.io/base/</a></td>
-    </tr>
-    <tr>
-      <td><strong>邓晓夏</strong> <a href="https://54dxx.github.io/why-no-pictures/">https://54dxx.github.io/why-no-pictures/</a></td>
-    </tr>
-    <tr>
-      <td><strong>伍声远 </strong><a href="https://wyfnb666.github.io/jtm/">https://wyfnb666.github.io/jtm/</a></td>
-    </tr>
-  </tbody>
-</table>
+    <script src="file:///C|/Users/eric2/Desktop/script.js"></script>
 </body>
 </html>
