--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <button class="hover-button"onclick="window.location.href='https://elcept.github.io/base/'">李若川</button>
             <button class="hover-button"onclick="window.location.href='https://54dxx.github.io/why-no-pictures/'">邓晓夏</button>
             <button class="hover-button"onclick="window.location.href='https://wyfnb666.github.io/jtm/'">伍声远</button>
+			<button class="hover-button"onclick="window.location.href='https://caoxuan5211.github.io/CS2402/'">返回2402班级主页</button>
         </section>
     </div>
 
